--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,19 +7,32 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 
-    <title>SinatraAppTravel</title>
+    <title>ComuseSinatraApp</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
   <body>
+    <div class="nav">
+      <% if logged_in? %>
+        <a href="/logout">Logout</a>
+        <a href="/posts">All Posts</a>
+        <a href="/posts/new">Create Post</a>
+      <%  end %>
+    </div>
     <div class="wrapper">
+
+      <% if flash[:message] %>
+        <h3 style="color:green;"><%= flash[:message] %></h3>
+      <% elsif flash[:errors] %>
+        <h3 style="color:red;"><%= flash[:errors] %></h3>
+      <% end %>
 
         <%= yield %>
 
       <footer class="branding">
-        <small>&copy; 2020 <strong>SinatraAppTravel</strong></small>
+        <small>&copy; 2019 <strong>ComuseSinatraApp</strong></small>
       </footer>
     </div>
 
