--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,5 +1,5 @@
 
 <div class="container">
-<h1>Welcome to Co.muse!</h1>
+<h1>Welcome!</h1>
 <a href="/login">Login</a> or <a href="/signup">Sign Up</a>
 </div>
