--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,4 +1,4 @@
-<h1>Welcome! Please Log In</h1>
+<h1>Log In Here</h1>
 
 <form class="" action="/login" method="post">
   <label for="email">Email:</label>
