--- a/app/views/posts/edit.erb
+++ b/app/views/posts/edit.erb
@@ -1,4 +1,4 @@
-<h1>Edit Post!</h1>
+<h1>Edit Post Here</h1>
 
 <form class="" action="/posts/<%= @post.id %>" method="post">
   <input type="hidden" name="_method" value="patch">
